<resources>
    <string name="app_name">sum</string>

    <string name="lat">Konum 1</string>
    <string name="name_surname">Adı Soyadı</string>
    <string name="facultyName">Fakülte Adı</string>
    <string name="long1">Konum2</string>
    <string name="status">Durum</string>
    <string name="save">Kaydet</string>
    <string name="worker">Çalışan Girişi İçin Tıklayınız</string>
    <string name="servant">Hizmetli Girişi İçin Tıklayınız</string>
    <string name="servantlogin">Hizmetli Girişi</string>
    <string name="workerlogin">Çalışan Girişi</string>
    <string name="worker_save">Çalışan Kaydı</string>
    <string name="servant_save">Hizmetli Kaydı</string>
    <string name="forget_password">Şifremi Unuttum</string>
    <string name="login">Giriş</string>
    <string name="register">Kayıt Ol</string>
    <string name="first_name">Adı</string>
    <string name="last_name">Soyadı</string>
    <string name="password">Şifre</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_mapdeneme">mapdeneme</string>
    <string name="save_loc">Konumu Kaydet</string>
    <string name="save_name">Adı</string>
    <string name="save_surname">Soyadı</string>
    <string name="save_number">Cep Telefonu</string>
    <string name="save_mail">Mail</string>
    <string name="mail">E-mail</string>
    <string name="main_info">Daha Yeşil Bir Dünya İçin El Ele</string>
    <string name="collected_paper">Kağıt</string>
    <string name="collected_glass">Cam</string>
    <string name="collected_plastic">Plastik</string>
    <string name="show_map">Haritayı Görüntüle</string>
    <string name="get_route">Göreve Başla</string>
    <string name="get_work">Kutuları Göster</string>
    <string name="recycle_name">Geri Dönüşüm</string>
    <string name="recycle_name2">Geri Dönüşüm Uygulaması</string>
    <string name="title_activity_direction">Direction</string>
    <string name="add_bin">Atık Kutusu Ekle</string>
    <string name="delete_bin">Kutuyu Sil</string>
    <string name="total_waste">Toplam Atık</string>
    <string name="birth_day">Doğum Yılı</string>
    <string name="adres">Adres</string>
    <string name="yapilan_isler">Yapılan İşler</string>
    <string name="user_settings">Kullanıcı Ayarları</string>
    <string name="user_info">Kullanıcı Bilgileri</string>
    <string name="notification">Bildirimler</string>
    <string name="messages">Mesajlar</string>
    <string name="get_work1">İşe Başla</string>
    <string name="position">Pozisyon</string>
    <string name="truck_no">Plaka</string>
    <string name="show_mission">Görev Göster</string>


</resources>