<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dcconnet.sum.Mapdeneme"
    tools:showIn="@layout/activity_mapdeneme"
    android:elevation="5dp">





    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="match_parent"

        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:text="@string/save_loc"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#BFBEBA"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:text="@string/get_route"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#BFBEBA"
        android:padding="15dp"
        />
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:text="@string/add_bin"
        android:layout_gravity="bottom|center|start"
        android:layout_marginBottom="24dp"
        android:padding="5dp"
        android:backgroundTint="#BFBEBA"
        />




</FrameLayout>


