<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2D7D7"
    tools:context=".ServantRegister">


    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="525dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="20dp"
                android:background="@android:drawable/dialog_holo_light_frame">


            </LinearLayout>



        </LinearLayout>


    </RelativeLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/servant_first_name_input"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="48dp"
        android:importantForAutofill="no"
        android:textColorHint="@color/black"
        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/servant_first_name"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:hint="@string/first_name"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/servant_last_name_input"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="24dp"
        android:importantForAutofill="no"
        android:textColorHint="@color/black"
        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/servant_first_name_input"
        app:layout_constraintStart_toStartOf="@+id/servant_first_name_input"
        app:layout_constraintTop_toBottomOf="@+id/servant_first_name_input">

        <EditText
            android:id="@+id/servant_last_name"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:hint="@string/last_name"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/servant_password_input"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#56000000"
        android:textColorHint="@color/black"
        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="@+id/servant_last_name_input"
        app:layout_constraintStart_toStartOf="@+id/servant_last_name_input"
        app:layout_constraintTop_toBottomOf="@+id/servant_last_name_input"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/servant_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/servant_mail_input"
        android:layout_width="300dp"
        android:layout_height="60dp"

        android:layout_marginTop="24dp"
        android:importantForAutofill="no"
        android:textColorHint="@color/black"
        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/servant_password_input"
        app:layout_constraintStart_toStartOf="@+id/servant_password_input"
        app:layout_constraintTop_toBottomOf="@+id/servant_password_input">

        <EditText
            android:id="@+id/servant_mail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/save_mail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/servant_number_input"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="24dp"
        android:importantForAutofill="no"
        android:textColorHint="@color/black"
        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/servant_mail_input"
        app:layout_constraintStart_toStartOf="@+id/servant_mail_input"
        app:layout_constraintTop_toBottomOf="@+id/servant_mail_input">

        <EditText
            android:id="@+id/servant_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/save_number"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/servant_save"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#00000000"
        app:layout_constraintEnd_toEndOf="@+id/servant_number_input"
        app:layout_constraintStart_toStartOf="@+id/servant_number_input"
        app:layout_constraintTop_toBottomOf="@+id/servant_number_input">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/custom_edittext_input" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/servantinfo"
        android:layout_width="182dp"
        android:layout_height="27dp"
        android:text="@string/servant_save"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>